--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -70,4 +70,8 @@
     <string name="popup_title_chilun">Gearwheel</string>
     <string name="popup_title_cangmen">Cabin door</string>
 
+    <!-- DC dimming settings -->
+    <string name="dc_dimming_enable_title">Anti-Flicker Mode</string>
+    <string name="dc_dimming_enable_summary">DC Dimming reduces eye strain in low light conditions (Note: reduce image quality and color production)</string>
+
 </resources>
